# bitrot

./: .gitignore  Cargo.toml  LICENSE
.github/ISSUE_TEMPLATE/: bug_report.md
.trunk/: trunk.yaml
.trunk/configs/: clippy.toml
docs/: README.md  issue_1.md
docs/issue_1/: issue_1.md  plot.py  random.py  stepped.py
docs/issue_6/: issue_6.md
src/: args.rs  check.rs  main.rs  progress.rs
